Add reset password api and test
